# Spla3bot

./: .dockerignore  .env.example  .env.sample  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Procfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.github/: README.md
.github/workflows/: ci.yml
cogs/: about.py  admin.py  challenge.py  coop.py  db.py  error.py  fest.py  help.py  info.py  open.py  regular.py  spla3.py
config/: config.py
constants/: common.py  message.py
docs/: PRIVACY_POLICY.md  PRIVACY_POLICY_EN.md  TERMS_OF_SERVICE.md
docs/en-EN/: PRIVACY_POLICY_EN.md  TERMS_OF_SERVICE_EN.md
lib/: api.py  check.py  color.py  config.py  discord.py  functions.py  img.py  models.py  molding.py  requests.py  spla_func.py  text.py
src/: weapons3.json  weapons3_list.py
utils/: image_util.py  log_util.py  pagination_util.py  spla3_utils.py
