[project]
name = "spla3bot"
version = "0.1.0"
description = "About This repository is for knowing Splatoon3 stage information on Discord Bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "discord-py>=2.5.2",
    "pillow>=11.2.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
