[project]
name = "spla3bot"
version = "7.1.0"
description = "About This repository is for knowing Splatoon3 stage information on Discord Bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "discord-py>=2.5.2",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
